cluster/core/monitoring/grafana/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`grafana.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - name: grafana
          namespace: monitoring
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
